# materials-structure-benchmark

./: .gitattributes  .gitignore  ATTRIBUTION.md  CITATION.cff  LICENSE  LICENSE-DATA  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: validate.yml
catalog/: collections.json
docs/: ADDING_RECORDS.md  BENCHMARK_TIERS.md  DATA_RELEASE_POLICY.md  ROADMAP.md
index/: benchmark-tiers.json  by-class.json  by-element.json  by-evidence.json  by-formula.json  by-id.json  by-quality.json  by-structure-type.json  summary.json
oracles/: structural-invariants-v1.json
schema/: benchmark-split.schema.json  material-record.schema.json  structural-oracle.schema.json
scripts/: __init__.py  catalog_tools.py  generate_benchmark_tiers.py  import_cod_bulk.py  import_mc2d.py  query_catalog.py
splits/: batch-medium-v1.json  batch-small-v1.json  batch-smoke-v1.json
src/materials_structure_benchmark/: __init__.py  query.py
structures/bulk/cod/: 1008205.cif  1008205.vasp  1008520.cif  1008520.vasp  1008853.cif  1008853.vasp  1010151.vasp  1010275.vasp  1010288.vasp  1010308.vasp  1010319.vasp  1010622.vasp  1510187.cif  1510187.vasp  1510205.cif  1510205.vasp  1510294.cif  1510294.vasp  1521250.cif  1521250.vasp  1522025.vasp  1522780.cif  1522780.vasp  1524268.cif  1524268.vasp  1527188.vasp  1527421.cif  1527421.vasp  1527463.vasp  1528007.vasp  1528008.vasp  1528165.vasp  1531167.cif  1531167.vasp  1537807.cif  1537807.vasp  2310589.cif  2310589.vasp  4031460.cif  4031460.vasp  (+58 more)
structures/monolayer/mc2d/00/: 0010786a-0457-472c-8f86-9da24836867b.cif  0010786a-0457-472c-8f86-9da24836867b.vasp  002e6827-db47-4e77-9e91-25db60799475.cif  002e6827-db47-4e77-9e91-25db60799475.vasp  00463f16-8212-4e61-9c8f-c6fa21d97221.cif  00463f16-8212-4e61-9c8f-c6fa21d97221.vasp  0054066a-a75d-43ff-9644-289656d39676.cif  0054066a-a75d-43ff-9644-289656d39676.vasp  00676f04-8b2c-4eac-be95-86f49c9bd268.cif  00676f04-8b2c-4eac-be95-86f49c9bd268.vasp  0079ca3d-d721-4967-8b09-b5f43cddd1ad.cif  0079ca3d-d721-4967-8b09-b5f43cddd1ad.vasp  007d0b24-f69b-4b51-9682-0477304c3a3f.cif  007d0b24-f69b-4b51-9682-0477304c3a3f.vasp  00b5d82b-1763-4d98-aec5-83fc8374057c.cif  00b5d82b-1763-4d98-aec5-83fc8374057c.vasp  00cab5b8-c411-42b7-9d3a-8af80be8271a.cif  00cab5b8-c411-42b7-9d3a-8af80be8271a.vasp  00d062f2-cb13-4d30-bdb5-abab1b195554.cif  00d062f2-cb13-4d30-bdb5-abab1b195554.vasp  00d4ff3b-8139-43f6-a394-816add4eceb2.cif  00d4ff3b-8139-43f6-a394-816add4eceb2.vasp  00d63b7d-2a9a-409f-9449-99ae70f60252.cif  00d63b7d-2a9a-409f-9449-99ae70f60252.vasp  00f4726f-6b15-489f-b422-5e3043384000.cif  00f4726f-6b15-489f-b422-5e3043384000.vasp
structures/monolayer/mc2d/01/: 0125375f-3558-4fa3-860d-92ac9897b276.cif  0125375f-3558-4fa3-860d-92ac9897b276.vasp  016c1ea3-b79c-47a1-9eff-48bdbf23d35c.cif  016c1ea3-b79c-47a1-9eff-48bdbf23d35c.vasp  017d61d7-0a90-4abd-b12a-cf58a26b85ee.cif  017d61d7-0a90-4abd-b12a-cf58a26b85ee.vasp  0195cf93-eeea-407f-8093-042f421456b2.cif  0195cf93-eeea-407f-8093-042f421456b2.vasp  01bdefba-82ba-4e56-90c4-ebbae0ee9480.cif  01bdefba-82ba-4e56-90c4-ebbae0ee9480.vasp  01e45b85-e729-4929-bed8-9beb5d3422f9.cif  01e45b85-e729-4929-bed8-9beb5d3422f9.vasp  01fba92d-9a75-477a-8959-101e2874bbed.cif  01fba92d-9a75-477a-8959-101e2874bbed.vasp
structures/monolayer/mc2d/02/: 0209a9fd-3fb8-4450-89a2-d927e3601182.cif  0209a9fd-3fb8-4450-89a2-d927e3601182.vasp  02187179-4b1b-4a02-a4ab-9ca8b06c5cc0.cif  (+17 more)
taxonomy/: tags.json
tests/: test_catalog.py
(+5424 files in other folders)
