[project]
name = "materials-structure-benchmark"
version = "0.2.0"
description = "Versioned structure fixtures and indexes for materials-science software"
authors = [{name = "Jiaqi Xin"}]
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
import = ["materials-structure-core[io]>=0.0.2", "ase>=3.23"]
test = ["jsonschema[format]>=4.21"]

[project.scripts]
materials-catalog-query = "scripts.query_catalog:main"
