[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "materials-structure-benchmark"
version = "0.2.1"
description = "Versioned structure fixtures and indexes for materials-science software"
authors = [{name = "Jiaqi Xin"}]
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
import = ["materials-structure-core[io]>=0.0.2", "ase>=3.23"]
test = [
  "build>=1.2",
  "jsonschema[format]>=4.21",
  "twine>=5",
]

[project.scripts]
materials-catalog-query = "materials_structure_benchmark.query:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/materials-structure-benchmark" = [
  "catalog/materials.jsonl",
  "LICENSE-DATA",
  "NOTICE",
]
