[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "materials-structure-benchmark"
version = "0.3.0"
description = "Versioned structure fixtures and indexes for materials-science software"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Jiaqi Xin"}]
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE", "LICENSE-DATA"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
import = ["materials-structure-core[io]>=0.0.2", "ase>=3.23"]
test = [
  "build>=1.2",
  "jsonschema[format]>=4.21",
  "twine>=5",
]

[project.scripts]
materials-catalog-query = "materials_structure_benchmark.query:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
"share/materials-structure-benchmark" = [
  "catalog/materials.jsonl",
  "LICENSE-DATA",
  "NOTICE",
]
"share/materials-structure-benchmark/splits" = [
  "splits/batch-smoke-v1.json",
  "splits/batch-small-v1.json",
  "splits/batch-medium-v1.json",
]
"share/materials-structure-benchmark/oracles" = [
  "oracles/structural-invariants-v1.json",
]
"share/materials-structure-benchmark/index" = [
  "index/benchmark-tiers.json",
]
"share/materials-structure-benchmark/schema" = [
  "schema/material-record.schema.json",
  "schema/benchmark-split.schema.json",
  "schema/structural-oracle.schema.json",
]
